Fix text size on smallest screen widths

--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,10 @@ html {
   }
 }
 
-/* 768px / 16px = 48em */
-@media (max-width: 22em) {
+/* 360px / 16px = 22.5em */
+@media (max-width: 22.5em) {
   html {
-    font-size: 45%;
+    font-size: 44%;
   }
 }
 
